--- a/drinks-services.html
+++ b/drinks-services.html
@@ -52,8 +52,8 @@
       <nav class="space-x-6 font-medium">
         <a href="index.html" class="hover:text-[var(--gold)]">Home</a>
         <a href="index.html#services" class="hover:text-[var(--gold)]">Services</a>
-        <a href="https://duongnguyen1.glossgenius.com/" target="_blank" rel="noopener" class="hover:text-[var(--gold)]">Booking</a>
-        <a href="https://duongnguyen1.glossgenius.com/contact" target="_blank" rel="noopener" class="hover:text-[var(--gold)]">Contact</a>
+        <a href="https://www.lldtek.org/salon/appt/VkZoZk1URTNNRFE9" target="_blank" rel="noopener" class="hover:text-[var(--gold)]">Booking</a>
+        <a href="https://www.lldtek.org/salon/appt/VkZoZk1URTNNRFE9contact" target="_blank" rel="noopener" class="hover:text-[var(--gold)]">Contact</a>
       </nav>
     </div>
   </header>
@@ -204,7 +204,7 @@
     <div class="bg-white border gold-border rounded-lg p-8 text-center" data-aos="fade-up">
       <h2 class="text-2xl font-bold gold-text mb-4">Book and Enjoy Drinks</h2>
       <p class="text-gray-600 mb-6">Experience our spa with complimentary drinks</p>
-      <a href="https://duongnguyen1.glossgenius.com/" target="_blank" rel="noopener" class="px-8 py-3 gold-bg text-white font-semibold rounded-lg hover:opacity-90 transition">
+      <a href="https://www.lldtek.org/salon/appt/VkZoZk1URTNNRFE9" target="_blank" rel="noopener" class="px-8 py-3 gold-bg text-white font-semibold rounded-lg hover:opacity-90 transition">
         Book Now
       </a>
     </div>
