--- a/index.html
+++ b/index.html
@@ -822,8 +822,8 @@
       <a href="#hero" class="hover:text-[var(--gold)]">Home</a>
       <a href="#services" class="hover:text-[var(--gold)]">Services</a>
       <a href="#gallery" class="hover:text-[var(--gold)]">Gallery</a>
-      <a href="https://duongnguyen1.glossgenius.com/" target="_blank" rel="noopener" class="hover:text-[var(--gold)]">Booking</a>
-      <a href="https://duongnguyen1.glossgenius.com/contact" target="_blank" rel="noopener" class="hover:text-[var(--gold)]">Contact</a>
+      <a href="https://www.lldtek.org/salon/appt/VkZoZk1URTNNRFE9" target="_blank" rel="noopener" class="hover:text-[var(--gold)]">Booking</a>
+      <a href="https://www.lldtek.org/salon/appt/VkZoZk1URTNNRFE9" target="_blank" rel="noopener" class="hover:text-[var(--gold)]">Contact</a>
     </nav>
     
     <!-- Mobile Menu Button -->
@@ -840,8 +840,8 @@
       <a href="#hero" class="hover:text-[var(--gold)] py-2 border-b border-gray-700" onclick="closeMobileMenu()">Home</a>
       <a href="#services" class="hover:text-[var(--gold)] py-2 border-b border-gray-700" onclick="closeMobileMenu()">Services</a>
       <a href="#gallery" class="hover:text-[var(--gold)] py-2 border-b border-gray-700" onclick="closeMobileMenu()">Gallery</a>
-      <a href="https://duongnguyen1.glossgenius.com/" target="_blank" rel="noopener" class="hover:text-[var(--gold)] py-2 border-b border-gray-700">Booking</a>
-      <a href="https://duongnguyen1.glossgenius.com/contact" target="_blank" rel="noopener" class="hover:text-[var(--gold)] py-2">Contact</a>
+      <a href="https://www.lldtek.org/salon/appt/VkZoZk1URTNNRFE9" target="_blank" rel="noopener" class="hover:text-[var(--gold)] py-2 border-b border-gray-700">Booking</a>
+      <a href="https://www.lldtek.org/salon/appt/VkZoZk1URTNNRFE9" target="_blank" rel="noopener" class="hover:text-[var(--gold)] py-2">Contact</a>
     </nav>
   </div>
 </header>
@@ -864,7 +864,7 @@
       <p class="text-base md:text-xl text-white mb-4 md:mb-6">
         Experience luxurious space, absolute relaxation with our dedicated & professional team.
       </p>
-    <a href="https://duongnguyen1.glossgenius.com/" target="_blank" rel="noopener" 
+    <a href="https://www.lldtek.org/salon/appt/VkZoZk1URTNNRFE9" target="_blank" rel="noopener" 
        class="luxury-btn px-6 md:px-8 py-3 md:py-4 rounded-lg text-white font-semibold text-base md:text-lg inline-block">
        Book Now
     </a>
@@ -889,7 +889,7 @@
       </p>
       <div class="flex flex-col sm:flex-row gap-3">
         <a href="#services" class="luxury-btn px-6 py-3 rounded-lg text-white font-semibold text-center text-sm md:text-base">View Prices</a>
-        <a href="https://duongnguyen1.glossgenius.com/" target="_blank" rel="noopener" class="luxury-btn px-6 py-3 rounded-lg text-white font-semibold text-center text-sm md:text-base">Book Now</a>
+        <a href="https://www.lldtek.org/salon/appt/VkZoZk1URTNNRFE9" target="_blank" rel="noopener" class="luxury-btn px-6 py-3 rounded-lg text-white font-semibold text-center text-sm md:text-base">Book Now</a>
       </div>
     </div>
     <div class="w-full md:w-96 h-48 md:h-64 bg-gray-100 rounded-lg flex items-center justify-center border gold-border cursor-pointer hover:shadow-2xl transition-all duration-300 hover:scale-105 active:scale-95" data-aos="zoom-in" onclick="openImage('card.jpg')">
@@ -1110,7 +1110,7 @@
     <!-- BOOKING (External) -->
     <section id="booking" class="max-w-xl mx-auto bg-white border gold-border p-4 md:p-6 rounded shadow-sm mb-8 md:mb-12 section-glow">
       <h3 class="text-xl md:text-3xl font-semibold mb-3 md:mb-4 gold-text text-center">Book an Appointment</h3>
-      <a href="https://duongnguyen1.glossgenius.com/" target="_blank" rel="noopener" class="block w-full text-center py-3 md:py-4 rounded gold-bg text-white font-semibold hover:opacity-90 text-sm md:text-base">
+      <a href="https://www.lldtek.org/salon/appt/VkZoZk1URTNNRFE9" target="_blank" rel="noopener" class="block w-full text-center py-3 md:py-4 rounded gold-bg text-white font-semibold hover:opacity-90 text-sm md:text-base">
         Go to Booking Page
       </a>
     </section>
