--- a/nail-services.html
+++ b/nail-services.html
@@ -93,8 +93,8 @@
       <nav class="space-x-6 font-medium text-gray-700">
         <a href="index.html" class="hover:text-[var(--gold)] transition">Home</a>
         <a href="index.html#services" class="hover:text-[var(--gold)] transition">Services</a>
-        <a href="https://duongnguyen1.glossgenius.com/" target="_blank" rel="noopener" class="hover:text-[var(--gold)] transition">Booking</a>
-        <a href="https://duongnguyen1.glossgenius.com/contact" target="_blank" rel="noopener" class="hover:text-[var(--gold)] transition">Contact</a>
+        <a href="https://www.lldtek.org/salon/appt/VkZoZk1URTNNRFE9" target="_blank" rel="noopener" class="hover:text-[var(--gold)] transition">Booking</a>
+        <a href="https://www.lldtek.org/salon/appt/VkZoZk1URTNNRFE9contact" target="_blank" rel="noopener" class="hover:text-[var(--gold)] transition">Contact</a>
       </nav>
     </div>
   </header>
@@ -184,7 +184,7 @@
     <div class="bg-white border gold-border rounded-lg p-8 text-center" data-aos="fade-up">
       <h2 class="text-2xl font-bold gold-text mb-4">Book a Manicure</h2>
       <p class="text-gray-600 mb-6">Choose your service and book today</p>
-      <a href="https://duongnguyen1.glossgenius.com/" target="_blank" rel="noopener" class="inline-block px-8 py-3 gold-bg text-white font-semibold rounded-lg hover:opacity-90 transition">
+      <a href="https://www.lldtek.org/salon/appt/VkZoZk1URTNNRFE9" target="_blank" rel="noopener" class="inline-block px-8 py-3 gold-bg text-white font-semibold rounded-lg hover:opacity-90 transition">
         Book Now
       </a>
     </div>
